<resources>
    <string name="app_name">Bina Bacaan Qur\'an</string>
    <string name="mim_mati">Mim Mati</string>
    <string name="idgham">Idgham</string>
    <string name="idzhar">Idzhar</string>
    <string name="ikhfa">Ikhfa</string>
    <string name="iqlab">Iqlab</string>
    <string name="tajwid">Tajwid Dasar</string>
    <string name="tahsin">Tahsin Dasar</string>
    <string name="hukum_idgham">Hukum Idgham</string>
    <string name="idgham_article">Idgham secara bahasa yaitu memasukkan / dengung sementara menurut istilah ialah memasukkan huruf yang pertama kedalam huruf selanjutnya sehingga menjadi gabungan huruf yang bertasydid dengan panjang 2 harakat.\n\nIdgham terbagi menjadi 2 bagian, yaitu Idgham Bigunnah dan Bilagunnah.\nIdgham Bigunnah ( dengan dengung ) terdiri dari huruf:\nmim (م), nun (ن), wau (و), ya (ي)  \ncontoh:\n</string>
    <string name="idghambg1">أَجَلٍۢ مُّسَمًّۭى</string>
    <string name="idghambg2">عَامِلَةٌۭ نَّاصِبَةٌۭ</string>
    <string name="idgham_article4">Idgham Bilagunnah ( tanpa dengung ) terdiri dari huruf :\nlam (ل) dan ra (ر)  \ncontoh:</string>
    <string name="idghamblg1">خَيْرًۭا لَّكُمْ ۚ</string>
    <string name="idghamblg2">وَكَانَ ٱللَّهُ غَفُورًۭا رَّحِيمًۭا</string>
    <string name="nun_mati">Nun Mati</string>
    <string name="pengecualian_idgham">Pengecualian Idgham\nNun mati / tanwin dibaca secara jelas dan hanya ada 4 kalimat yang mengandung aturan tersebut yaitu:\nAd Dunya (ءَ ٱلدُّنْيَا), Bunyanun (بُنْيَـٰنٌۭ), Qinwanun (قِنْوَان), Sinwanun (صِنْوَان) \ncontoh:</string>
    <string name="pcidgham1">وَغَيْرُ صِنْوَان</string>
    <string name="pcidgham2">بُنْيَـٰنٌۭ مَّرْصُوصٌۭ</string>
    <string name="hukum_idzhar">Hukum Idzhar</string>
    <string name="idzhar_article">Apabila nun mati / tanwin bertemu dengan huruf yang keluar dari tenggorokan (halq) serta nun mati / tanwin dibaca secara jelas tanpa dengung. \nHukum Idzhar terdiri dari huruf :\n* ain (ع),\n* ghain (غ),\n* ha (ح),\n* ha besar (هـ),\n* alif/hamzah (ا),\n* kha (خ) \ncontoh:\n</string>
    <string name="idzhar1">وَتَنْحِتُوْنَ مِنَ الْجِبَالِ</string>
    <string name="idzhar2">فَرِيْقًا هَدٰ</string>
    <string name="hukum_ikhfa">Hukum Ikhfa</string>
    <string name="ikhfa_article">Apabila nun mati / tanwin bertemu dengan 15 huruf hijaiyah selain huruf idzhar, idgham dan iqlab serta nun mati / tanwin dibaca secara samar-samar dengan panjang 2 harakat. Berikut huruf-huruf ikhfa yang terangkum dalam syair dengan tujuan agar mudah dihafal.\n</string>
    <string name="hukum_iqlab">Hukum Iqlab</string>
    <string name="iqlab_article">Merubah bunyi nun mati / tanwin menjadi mim mati serta ditandai dengan mim kecil jika bertemu dengan huruf Ba (ب).  </string>
    <string name="hukum_mim_mati">Hukum Mim Mati</string>
    <string name="idgham_mislain_content">Jika mim mati bertemu dengan huruf mim secara bersamaan dan panjangnya 2 harakat.\ncontoh :</string>
    <string name="ikhfa_syafawi_content">Jika mim mati bertemu dengan huruf ba maka dibaca panjang 2 harakat disertai dengung.\ncontoh :</string>
    <string name="idzhar_syafawi_content">Jika mim mati bertemu dengan salah satu dari semua huruf hijaiyah kecuali huruf mim dan ba, maka mim mati dibaca secara jelas tanpa dengung.\ncontoh :\n</string>
    <string name="mad_thabi_i">Mad Thabi\'i</string>
    <string name="mad_badal">Mad Badal</string>
    <string name="mad_iwadh">Mad Iwadh</string>
    <string name="mad_shilah">Mad Shilah\nSughra</string>
    <string name="mthabi_article">Bacaan panjang 2 harakat pada: \nalif (ا) yang sebelumnya fathah,\nwau mati (و) yang sebelumnya dommah,\ndan ya mati (ي) yang sebelumnya kasroh.\n</string>
    <string name="madtabi1">نُوحِيهَآ</string>
    <string name="madtabi2">قَالُوا۟ يَـٰمُوسَ</string>
    <string name="mbadal_article">Bacaan panjang 2 harakat pada setiap hamzah yang berada sebelum huruf mad.</string>
    <string name="mbadal_notes">Catatan : Mad Tahbi\'i berbeda dari Mad Badal, jika Mad Badal huruf awalnya adalah hamzah (ء),\nsementara Mad Thabi\'i huruf awalnya bukan hamzah.\n</string>
    <string name="madbadal1">يُرَآءُونَ</string>
    <string name="madbadal2">جَآءُو بِٱلْبَيِّنَـٰت</string>
    <string name="miwadh_article">Bacaan panjang 2 harakat dengan mengganti tanwin/fathahtain menjadi bacaan alif / fathah dan terletak pada akhir ayat.\n</string>
    <string name="madiwadh1">وَلَا يُشْعِرَنَّ بِكُمْ أَحَدًا</string>
    <string name="madiwadh2">وَأَنزَلْنَا مِنَ ٱلسَّمَآءِ مَآءًا</string>
    <string name="mad_silah_article">Bacaan panjang 2 harakat pada huruf Ha Dhamir diantara huruf berharakat (seperti mad thabi\'i)</string>
    <string name="madshila1">أُعَذِّبُهُۥ عَذَابًۭا</string>
    <string name="madshila2">إِنَّهُۥ عَلَىٰ رَجْعِهِۦ لَقَادِرٌ</string>
    <string name="mad_silah_art2">Mad Shilah Sughra tidak dibaca panjang jika bertemu dengan waqaf atau menghentikan bacaan.</string>
    <string name="madshila3">أُعَذِّبُهُۥ\nإِنَّهُۥ</string>
    <string name="mad_silah_pengecualian">Salah satu pengecualian jika Ha Dhamir berada diantara huruf mati dan huruf berharakat.</string>
    <string name="madshila4">فِيهِ ۛ هُدًۭ</string>
    <string name="mad_lazim">Mad Lazim</string>
    <string name="mad_lazim_article">Mad Lazim terbagi menjadi 4 bagian :\n 1.Mad Lazim Kilmi Mutsaqqal : Bacaan mad yang bertemu dengan huruf bertasydid dalam 1 kalimat. Panjang bacaan 6 harakat.\ncontoh:\n</string>
    <string name="madlazim1">ٱلْحَآقَّةُ</string>
    <string name="madlazim2">وَلَا الضَّاۤلِّيْن</string>
    <string name="mad_lazim_mukhaffaf_article">2. Mad Lazim Kilmi Mukhaffaf : Bacaan mad dan setelahnya terdapat huruf berharakat sukun dan tidak di-idgham-kan. Panjang bacaan 6 harakat:\ncontoh:\n</string>
    <string name="madlazim3">ءَآلْـَٔـٰنَ وَقَدْ عَصَيْتَ قَبْلُ</string>
    <string name="mad_lazim_mutsaqqal2_article">3. Mad Lazim Harf Mutsaqqal : Bacaan panjang pada huruf mad yang bertemu tasydid atau di-idgham-kan dan biasanya terdapat pada huruf awal atau pembuka surah.Panjang bacaan 6 harakat.\contoh:\n</string>
    <string name="madlazim4">كٓهيعٓصٓ</string>
    <string name="madlazim5">يسٓ</string>
    <string name="mad_lazim_mukhaffaf2_article">4. Mad Lazim Harf Mukhaffaf : Bacaan panjang pada huruf mad yang tidak diiringi huruf bertasydid dan tidak di-idgham-kan serta letaknya pada huruf awal atau pembuka surah.Panjang bacaan 6 harakat.\ncontoh:\n</string>
    <string name="madlazim6">صٓ نآ</string>
    <string name="mad_aridh_lissukun">Mad Aridh\n Lissukun</string>
    <string name="mad_arid_article">Bacaan panjang pada huruf yang biasanya terletak diakhir ayat atau sebelum waqaf pada pertengahan ayat yang sebelumnya terdapat Mad Thobi\'i atau Mad Asli. Panjang bacaan bisa 2, 4 ataupun 6 harakat.\ncontoh panjang bacaan 2 harakat:\n</string>
    <string name="mad_aridh_notes">Catatan : Jika bacaan pada akhir ayat disambung, maka hukum bacaan mad aridh lissukun tidak berlaku.\n</string>
    <string name="madarid1">اَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِيْنَۙ</string>
    <string name="bagian_ikhfa">Ikhfa sendiri terbagi menjadi 3 bagian : \nIkhfa Akrab : Cara pengucapannya ketika menyuarakan nun mati, ujung lidah hampir menyentuh pangkal dua buah gigi atas sesuai posisi makhroj\n د, ت , ط\nIkhfa Adna : Cara pengucapannya menjadi vokal (ng) ketika bertemu dengan huruf\n ك dan ق
        \nIkhfa Ausath : Cara pengucapannya jika bertemu dengan salah satu dari 10 huruf ikhfa lainnya pada saat mengucapkan nun mati, sikap lidah atau bibir dipersiapkan menempati makhroj huruf yang dihadapi.\n(ث , ض , ص , س , ش , ج , ذ , ظ , ف)\n</string>
    <string name="ikhfa1">أَمْ لَمْ تُنذِرْهُ</string>
    <string name="ikhfa2">إِن كُنتُم مُّؤْمِنِينَ</string>
    <string name="hukum_ra_desc">Hukum Ra terbagi menjadi 2 macam yaitu:\n1)Ra Tafkhim\n2)Ra Tarqiq\n\nRa Tafkhim adalah pelafadzan huruf Ra yang dibaca tebal. Apabila memenuhi beberapa syarat sebagai berikut:\na)Jika huruf Ra berharakat fathah/fathahtain</string>
    <string name="hukum_ra_desc2">b)Jika huruf Ra berharakat dhammah</string>
    <string name="hukum_ra_desc3">c)Jika huruf Ra berharakat sukun dan huruf sebelumnya berharakat fathah</string>
    <string name="hukum_ra_desc4">d)Jika huruf Ra berharakat sukun dan huruf sebelumnya berharakat dhommah</string>
    <string name="hukum_ra_desc5">e)Jika huruf Ra berharakat sukun dan huruf sebelumnya berharakat kasrah</string>
    <string name="hukum_ra_desc6">f)Jika huruf Ra berharakat sukun dan letaknya berada pada akhir ayat atau diwaqafkan</string>
    <string name="ra_tafkhim">Ra Tafkhim</string>
    <string name="idgham_mutaqaribaan">Idgham\nMutaqariban</string>
    <string name="mutaqa1">وَقُل رَّبِّ زِدْنِى عِلْمًۭا</string>
    <string name="idgham_mutaqaribaan_desc">Idgham Mutaqaribain adalah pertemuan antara dua huruf yang hampir sama makhraj dan sifatnya</string>
    <string name="hamzah_wasal">Hamzah\nWashal</string>
    <string name="huruf_ikhfa">صِفْ ذَا ثَنَا كَمْ جَادَ شَخْصٌ قَدْ سَمَا\n دُمْ طَيِّبًا زِدْ فِي تُقًى ضَعْ ظَالِمًا</string>
    <string name="ratafkhim1">رَمَضَانَ</string>
    <string name="ratafkhim2">كَفَرُ</string>
    <string name="ratafkhim3">مَرْيَم</string>
    <string name="ratafkhim4">ٱلْقُرْءَانِ</string>
    <string name="ratafkhim5">لَبِٱلْمِرْصَادِ</string>
    <string name="ratafkhim6">وَٱلْعَصْرِ</string>
    <string name="versi_app">Versi : 2.7</string>
    <string name="tl_about1">* Apa itu App Bina Bacaan Qur\’an?</string>
    <string name="tl_about2">* Apa Tujuan Dikembangkannya App Bina Bacaan Qur\'an?</string>
    <string name="tl_about3">* Apa Saja Fitur/Halaman yang Tersedia Dalam Aplikasi Ini?</string>
    <string name="desc_about1">Aplikasi Bina Bacaan Qur’an merupakan salah satu aplikasi mobile pembelajaran dasar Tajwid &amp; Tahsin terlengkap yang hadir di PlayStore guna menunjang kebutuhan belajar Agama terutama ilmu Tajwid &amp; Tahsin bagi seluruh umat Islam di Indonesia khususnya.\n</string>
    <string name="desc_about2">Kami menghadirkan dan mengembangkan aplikasi ini sebagai media pembelajaran Tajwid &amp; Tahsin tingkat dasar dan semata-mata untuk menggapai ridho Allah Ta\’ala. Kami sadar bahwa dengan adanya kemajuan teknologi saat ini membuat kami tergerak ikut mengembangkan
        aplikasi ini sebagai media dakwah 4.0 dan yang paling penting adalah kami berikan hak sepenuhnya kepada para pengguna untuk sumbangsih ide dan ilmu/pemahaman untuk kemajuan aplikasi ini.\n</string>
    <string name="desc_about3">Aplikasi ini tidak hanya menyediakan materi seputar Tajwid &amp; Tahsin saja, namun ada beberapa fitur penunjang pembelajaran baik offline maupun online seperti:\n
    - Info Qur\’an : Halaman ini berisi beberapa info seputar Al-Qur\’an, seperti pencarian ayat dalam Qur\’an, ayat-ayat sajadah, tanda-tanda waqaf, hingga pertanyaan-pertanyaan terkait Al-Qur\’an yang bisa menjadi penambah wawasan bagi para pengguna\n
    - Murottal Fatihah : Halaman ini berisi panduan khusus kepada para pengguna untuk mempelajari surat Al-Fatihah. Mengapa hanya surat Al-Fatihah? Karena surat Al-Fatihah merupakan rukun wajib dalam Sholat dan setiap muslim wajib menghafalkan dan membacanya dengan cara yang baik dan benar. Maka dari itu, dalam fitur ini kami menyediakan panduan Murottal dari beberapa Syeikh agar bacaannya bisa dicontoh oleh para pengguna dan InsyaAllah mampu memperbaiki rukun Sholat kita.\n
    - Dzikir : Halaman ini berisi kumpulan dzikir-dzikir harian seperti dzikir al-matsurah pagi &amp; petang, dan doa-doa harian sebagai penunjang bagi para pengguna untuk menjalankan ibadah sunnah sesuai tuntunan Rasulullah SAW.\n
    - Artikel Online : Halaman ini berisi seputar info dan artikel tentang Qur\’an secara realtime dan hanya dapat diakses dalam keadaan online oleh pengguna.\n
    - Grafik Monitoring Tilawah : Halaman ini bertujuan untuk memonitoring tilawah pengguna setiap hari\n</string>
</resources>