<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Tajwid.HukumMad.MadLazimActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabmadlazim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/FloatingActionButtonStyle"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/ellipse_background"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mad_lazim"
        style="@style/TextTitleSet"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitle"
            style="@style/cardBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSet"
        android:text="@string/mad_lazim_article" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/madlazim1"
            style="@style/TextArabicSet"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/madlazim2"
        style="@style/TextArabicSet"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_pause_circle_outline_black_24dp"
        android:id="@+id/play_toggle_madlazim"
        android:background="@android:color/transparent"
        android:layout_gravity="center_horizontal"/>
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mad_lazim_mukhaffaf_article"
            style="@style/TextSet"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/madlazim3"
            style="@style/TextArabicSet"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_pause_circle_outline_black_24dp"
            android:id="@+id/play_toggle_madlazim2"
            android:background="@android:color/transparent"
            android:layout_gravity="center_horizontal"/>
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mad_lazim_mutsaqqal2_article"
            style="@style/TextSet"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/madlazim4"
            style="@style/TextArabicSet"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/madlazim5"
            style="@style/TextArabicSet"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_pause_circle_outline_black_24dp"
            android:id="@+id/play_toggle_madlazim3"
            android:background="@android:color/transparent"
            android:layout_gravity="center_horizontal"/>
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mad_lazim_mukhaffaf2_article"
            style="@style/TextSet"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/madlazim6"
            style="@style/TextArabicSet"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_pause_circle_outline_black_24dp"
            android:id="@+id/play_toggle_madlazim4"
            android:background="@android:color/transparent"
            android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>