<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Bookmark.HukumLamdanRa.HukumRaActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabratafkhim"
        style="@style/FloatingActionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/ellipse_background"/>
        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ra_tafkhim"
            style="@style/TextTitleSet" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitle"
            style="@style/cardBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hukum_ra_desc"
            style="@style/TextSet" />
        <TextView
            android:id="@+id/hukumra_image1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratafkhim1"
            style="@style/TextArabicSet"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_pause_circle_outline_black_24dp"
            android:id="@+id/play_toggle_hukumra"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hukum_ra_desc2"
            style="@style/TextSet"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratafkhim2"
            style="@style/TextArabicSet"
            android:id="@+id/hukumra_image2"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_pause_circle_outline_black_24dp"
            android:id="@+id/play_toggle_hukumra2"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hukum_ra_desc3"
            style="@style/TextSet"/>
        <TextView
            android:id="@+id/hukumra_image3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratafkhim3"
            style="@style/TextArabicSet"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_pause_circle_outline_black_24dp"
            android:id="@+id/play_toggle_hukumra3"
            android:background="@android:color/transparent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hukum_ra_desc4"
            style="@style/TextSet" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratafkhim4"
            style="@style/TextArabicSet"
            android:id="@+id/hukumra_image4"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_pause_circle_outline_black_24dp"
            android:id="@+id/play_toggle_hukumra4"
            android:background="@android:color/transparent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hukum_ra_desc5"
            style="@style/TextSet"/>
        <TextView
            android:id="@+id/hukumra_image5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratafkhim5"
            style="@style/TextArabicSet"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_pause_circle_outline_black_24dp"
            android:id="@+id/play_toggle_hukumra5"
            android:background="@android:color/transparent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hukum_ra_desc6"
            style="@style/TextSet"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratafkhim6"
            android:id="@+id/hukumra_image6"
            style="@style/TextArabicSet"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_pause_circle_outline_black_24dp"
            android:id="@+id/play_toggle_hukumra6"
            android:background="@android:color/transparent"
            android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>