<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting.TentangAppActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_logoapp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versi_app"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tl_about1"
        android:textColor="#000000"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"/>

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_about1"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tl_about2"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="5dp" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_about2"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tl_about3"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="5dp" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_about3"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>
</ScrollView>