<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Tajwid.HukumMad.MadThabiiActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/ellipse_background"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mad_thabi_i"
        style="@style/TextTitleSet"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textNextBtn"
        android:text="@string/mad_shilah"
        style="@style/TextButtonNextSet"
        android:layout_below="@id/textTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="15dp"
            android:layout_below="@id/textNextBtn"
            android:background="@drawable/rectangle_bg">

    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSet"
        android:text="@string/mthabi_article" />

    <TextView
        android:id="@+id/image_madtabi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/madtabi1"
        android:fontFamily="@font/me_quran"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/image_madtabi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/madtabi2"
            android:fontFamily="@font/me_quran"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_pause_circle_outline_black_24dp"
        android:id="@+id/play_toggle_madtabi"
        android:background="@android:color/transparent"
        android:layout_gravity="center_horizontal"/>
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextSet"
            android:text="@string/mbadal_notes" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>